--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,8 @@
+@import './variables.scss';
 @import './reset.scss';
-@import './components/modal';
+@import './components/_modal.scss';
+@import './components/_error.scss';
+
 body{
   background-color: #cccccc61;
   font-size: 18px;
@@ -15,17 +18,6 @@ body{
   display: inline-block;
 }
 
-.wrapper-error {
-  text-align: left;
-  width: 100%;
-  position: absolute;
-  bottom: -1.8rem;
-  font-size: 1rem;
-}
-
-.error {
-  color: red;
-}
 .btn {
   background-color: #000;
   color: #fff;
